--- a/DataAnalysis/www/Styles/Site.css
+++ b/DataAnalysis/www/Styles/Site.css
@@ -1,36 +1,49 @@
 ﻿body
 {
 }
+
+.top1
+{
+    width: 100%;
+    height: 140px;
+    background-color: #FFFFFF;
+    border-radius: 10px 10px 10px 10px;
+}
 #mainP
 {
-    width: 650px;
+    padding: 10px;
+    width: 730px;
     position: static;
-    float: right;
+    float: left;
+    border-radius: 10px 10px 10px 10px;
     background-color: #FFFFFF;
-    
+    margin-top: 10px;
 }
  #menu-table
- { width: 50%;
- }
- #back-page
 {
-    padding: 0px;
+    padding: 5px;
+    width: 400px;
+    font-family: 'Tekton Pro';
+    font-weight: bold;
+    text-align: center;    
+}
+ #page
+{
     margin: 0px auto 0px auto;
-    width: 750px;
-    background-color: "#CCCCCC";
-    flex-flow: row wrap;
-    align-content: space-around; 
+    border-radius: 10px 10px 10px 10px;
+    width: 750px;    
 }
  .emailme
  {float: right; 
   width: auto;
      }
      
-.menu
+#header
 {
     height: 75px;
     background-image: url('Flag.png');
-   border-radius:10px 0px 20px 0px
+    border-radius: 10px 10px 10px 10px;
+    margin-bottom: 10px;
 }
 
 #footer
@@ -38,4 +51,31 @@
     margin: 10px;
     padding: 10px;
     clear: both
-}     
+} 
+
+/* unvisited link */
+a:link
+{
+    color: #000000;
+}
+
+/* visited link */
+a:visited
+{
+    color: #000000;
+}
+
+/* mouse over link */
+a:hover
+{
+    color: #333333;
+}
+
+/* selected link */
+a:active {
+    color: #000000;
+}  
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+}  
