--- a/DataAnalysis/www/Styles/Site_O.css
+++ b/DataAnalysis/www/Styles/Site_O.css
@@ -1,37 +1,37 @@
 ﻿body
 {
-    margin: 0px;
-    width: 100%;
-    background-color: #FFFFFF;
 }
 
 .top1
 {
-    width: 900px;
-    height: 120px;
-    background-color: #FFFFFF;    
-    border-bottom-style: solid;
-    border-bottom-width: 2px;
-    border-bottom-color: #666666;
+    width: 100%;
+    height: 140px;
+    background-color: #FFFFFF;
+    border-radius: 10px 10px 10px 10px;
 }
 #mainP
 {
-    width: 900px;
+    padding: 10px;
+    width: 730px;
+    position: static;
+    float: left;
     border-radius: 10px 10px 10px 10px;
     background-color: #FFFFFF;
-    
+    margin-top: 10px;
 }
  #menu-table
 {
+    padding: 5px;
     width: 400px;
-    font-family: 'Comic Sans MS';
+    font-family: 'Tekton Pro';
     font-weight: bold;
-    text-align: center;
+    text-align: center;    
 }
  #page
 {
-    
     margin: 0px auto 0px auto;
+    border-radius: 10px 10px 10px 10px;
+    width: 750px;    
 }
  .emailme
  {float: right; 
@@ -41,12 +41,9 @@
 #header
 {
     height: 75px;
-    background-color: #999999;   
-}
-#header_M
-{
-     height: 75px;
-     width: 900px
+    background-image: url('Flag.png');
+    border-radius: 10px 10px 10px 10px;
+    margin-bottom: 10px;
 }
 
 #footer
