--- a/DataAnalysis/www/Styles/Site.css
+++ b/DataAnalysis/www/Styles/Site.css
@@ -3,7 +3,7 @@
     margin: 0px;
     width: 100%;
     height: 100%;
-    background-color: #FFFFFF;
+ 
 }
 .footer {
     position: relative;
@@ -81,18 +81,14 @@ table#course
 .top1
 {
     width: 900px;
-    height: 120px;
-    background-color: #FFFFFF;    
-    border-bottom-style: solid;
-    border-bottom-width: 0px;
-    border-bottom-color: #666666;
+    height: 90px;
+    background-color: #336699;    
 }
-#mainP
+.mainP
 {
     width: 900px;
-    border-radius: 10px 10px 10px 10px;
-    background-color: #FFFFFF;
-    
+    background-color: #FFFFFF;    
+    margin-top: 10px;
 }
 #mainP_cv
 {
@@ -110,10 +106,11 @@ table#course
     color: #FFFFFF;
 }
 
- #page
+ .page_all
 {
-    
     margin: 0px auto 0px auto;
+    background-color: #C0C0C0;
+    overflow: auto;
 }
  .emailme
 {
@@ -122,12 +119,12 @@ table#course
  
 }
      
-#header
+.header
 {
-    height: 75px;
+    height: 75px;    
     background-color: #999999;   
 }
-#header_M
+.header_M
 {
      height: 75px;
      width: 900px
@@ -143,13 +140,13 @@ table#course
 /* unvisited link */
 a:link
 {
-    color: #000000;
+    color: #336699;
 }
 
 /* visited link */
 a:visited
 {
-    color: #000000;
+    color: #336699;
 }
 
 /* mouse over link */
