--- a/DataAnalysis/www/Styles/Site.css
+++ b/DataAnalysis/www/Styles/Site.css
@@ -152,7 +152,7 @@ a:visited
 /* mouse over link */
 a:hover
 {
-    color: #333333;
+    color: #003366;
 }
 
 /* selected link */
@@ -162,4 +162,17 @@ a:active {
 a:hover, a:visited, a:link, a:active
 {
     text-decoration: none;
+}
+
+.workt
+{
+    text-align: left;
+}
+.yearW
+{
+    text-align: left;
+}
+.workexp
+{
+    margin-left: 30px;
 }  
